# abro

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  abro-state.json  context.md  index.html  package.json  pnpm-lock.yaml  summary.md  tsconfig.json  vite.config.ts
crates/ai-gateway/: Cargo.toml
crates/ai-gateway/src/: lib.rs  openrouter.rs  vertex.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/shell-integration/: Cargo.toml
crates/shell-integration/src/: lib.rs
crates/term-core/: Cargo.toml
crates/term-core/src/: lib.rs
scripts/: resize_icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: agent_manager.rs  ai_chat.rs  history.rs  mod.rs  terminal_tool.rs
src-tauri/src/settings/: config.rs  mod.rs  terminal_settings.rs
src-tauri/src/terminal/: mod.rs  pty.rs
src-ui/: App.tsx  SettingsModal.tsx  TerminalSession.tsx  ToolCallModal.tsx  index.css
