[workspace]
members = [
    "src-tauri",
    "crates/term-core",
    "crates/shell-integration",
    "crates/ai-gateway",
    "crates/persistence"
]
default-members = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Abro contributors"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol = "2.0"
thiserror = "2.0"
