[package]
name = "abro"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow.workspace = true
dirs = "5"
term-core = { path = "../crates/term-core" }
shell-integration = { path = "../crates/shell-integration" }
ai-gateway = { path = "../crates/ai-gateway" }
persistence = { path = "../crates/persistence" }
smol = { workspace = true }
thiserror = { workspace = true }
tauri-plugin-log = "2.8.0"
log = "0.4.29"
portable-pty = "0.9.0"
uuid = { version = "1.23.0", features = ["v4"] }
libc = "0.2"
